<resources>
    <string name="app_name">NourishingGeniusStudent</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="newsTxt">We’re continuously working to provide you with quality content. For more such content, subscribe to our newsletter.</string>
    <string name="careerTxt">Our quality of life depends mainly on 2 things, Career &amp; life partner. Probability of being happy in life after making t.....</string>
    <string name="careerHowTxt">It\'s very important to make a right choice in order to pursue excellence in your career, isn\'t it? So, then how you sele…</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="why_is_career_guidence_important">Why is career guidence\nimportant?</string>
    <string name="in_self_assessment">In Self Assessment</string>
    <string name="in_careers">In Careers</string>
    <string name="how_to_select_a_right_career_nfor_yourself">How to Select a right career\nfor yourself?</string>
    <string name="why_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="how_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="hi">Hi ! 🙋🏻‍♂️</string>
    <string name="welcome_to_nourishing_genius">Welcome to Nourishing Genius.</string>
    <string name="domain_expert">Domain Expert</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="career_info">Career Info</string>
    <string name="law">Law</string>
    <string name="science">Science</string>
    <string name="medical">Medical</string>
    <string name="commerce">Commerce</string>
    <string name="sports">Sports</string>
    <string name="enterpreneur">Enterpreneur</string>
    <string name="engineering">Engineering</string>
    <string name="impact">Impact</string>
    <string name="specialization">Specialization</string>
    <string name="career_paths">Career Paths</string>
    <string name="work">Work</string>
    <string name="work_lifeB">Work-Life Balance</string>
    <string name="adv_dis">Advantages &amp; Disadvantages</string>
    <string name="inv">Investment Vs Earning Potential</string>
    <string name="str_weak">Strengths &amp; Weakness</string>
    <string name="lorem_ipsum">StrengthsLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo a diam sollicitudin tempor. Sit amet commodo nulla facilisi nullam vehicula ipsum. Urna neque viverra justo nec ultrices. Fringilla est ullamcorper eget nulla facilisi. Enim nunc faucibus a pellentesque sit amet. Etiam dignissim diam quis enim lobortis. Nullam eget felis eget nunc lobortis mattis aliquam. In dictum non consectetur a erat. Risus pretium quam vulputate dignissim suspendisse in.</string>
    <string name="career_selection_nrs_3999">Career Selection\nRs.3999</string>
    <string name="_2_counseling_1_to_1_sessions_with_career_counselor">2 Counseling 1 to 1 sessions with Career Counselor.</string>
    <string name="psychometric_assessment_report">Psychometric Assessment Report.</string>
    <string name="career_selection_premium_pack_nrs_4999">Career Selection Premium Pack\nRs.4999</string>
    <string name="access_to_case_studies">Access to Case Studies</string>
    <string name="access_to_blogs">Access to Blogs.</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="buy_now">Buy Now!</string>
    <string name="my_enrollments">My Enrollments</string>
    <string name="help_desk">Help Desk</string>
    <string name="counselling">Counselling</string>
    <string name="give_feedBack">Give Feedback</string>
    <string name="rate_us">Rate Us!</string>
    <string name="click_to_upload_an_image">Click to upload \n an Image</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_age">Date of Birth</string>
    <string name="profile_location">Location</string>
    <string name="enter_name_here">Enter Name here…</string>
    <string name="delete_acc_txt">Delete Account</string>
    <string name="my_enrollments_description">You have not yet enrolled in any plan, so what’re you waiting for? Go grab one!</string>
    <string name="check_out">Check out</string>
    <string name="feedback_text"><![CDATA[Share your valuable feedback & let us know what more features you want from us. Thank you!]]></string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="write_here">Write Here…</string>
    <string name="help_desk_description">We\'re extremely sorry that you ran into some trouble. Don\'t worry, we\'re always available to help you out.</string>
    <string name="let_s_have_a_chat_over_whatsapp">Let\'s have a chat over whatsapp.</string>
    <string name="contact_us">Contact Us!</string>
    <string name="successful_people">Successful People</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="subscribe">Subscribe</string>
    <string name="domain_experts">Domain Experts</string>
    <string name="case_studies">Case Studies</string>
    <string name="setting">Setting</string>
    <string name="enter_email_here">Enter Email</string>
    <string name="enter_gender_here">Enter Gender</string>
    <string name="enter_age_here">Select your Date of Birth</string>
    <string name="enter_location_here">Enter Address</string>
    <string name="login">Login</string>
    <string name="enter_your_referral_code">Referral Code (Optional)</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_regis_email_address">Enter your Registered Email Address</string>
    <string name="email">Email Id</string>
    <string name="pass">Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="enter_code">Enter Your Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_bold"><b><u>Sign Up</u></b></string>
    <string name="name_of_tuition_center">Name of Tuition center</string>
    <string name="enter_name_of_tuition_center">Enter Name of Tuition Center</string>
    <string name="enter_number_of_branches">Enter Number of Branches</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="number_of_branches">Numbers of Branches</string>
    <string name="number_of_student">Number of Student</string>
    <string name="enter_number_of_student">Enter Number of Student</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address_of_all_branches">Address of All Branches</string>
    <string name="enter_address_of_all_branches">Enter Address of All Branches</string>
    <string name="standard_of_students">Standard of Students</string>
    <string name="enter_standard_of_students">Enter Standard of Students</string>
    <string name="mediums">Mediums</string>
    <string name="select_your_branch_location">Select Your Branch Location</string>
    <string name="branch_location">Branch Location</string>
    <string name="select_your_mediums">Select Your Mediums</string>
    <string name="designation_of_person">Designation of Person</string>
    <string name="designation">Designation</string>
    <string name="contact">Contact Number</string>
    <string name="password">Password</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="contact_number_hint">Enter Contact Number</string>
    <string name="enter_your_password">Enter Password</string>
    <string name="enter_your_cnf_password">Enter Confirm Password</string>
    <string name="name_of_student">Name of Student</string>
    <string name="enter_name_of_student">Enter Name of Student</string>
    <string name="enter_email_address_of_student">Enter Email address of student</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password2"><b>Forgot Password ?</b></string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="contactNumber">Contact Number</string>
    <string name="already_have_any_account">Already Have an Account? <b>Login</b></string>
    <string name="email_example">vijaybhuva90@gmail.com</string>
    <string name="explore_careers">Careers</string>
    <string name="identify_your_genius">Identify\nyour Genius</string>
    <string name="get_on_counselling">Get 1 on 1 Counselling</string>
    <string name="top_expert">Top Expert</string>
    <string name="case_studies_of_highly_successful_people">Case Studies of highly successful people</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="career">Career</string>
    <string name="see_all">See All</string>
    <string name="explore">Explore</string>
    <string name="psychometric_assessment">Psychometric Assessment</string>
    <string name="you_have_not_yet_purchased_any_package">You have not yet purchased any package.</string>
    <string name="blogs">Blogs</string>
    <string name="most_popular">Most Popular</string>
    <string name="packages">Packages</string>
    <string name="username">User Name</string>
    <string name="newsletters">Newsletters</string>
    <string name="all">All</string>
    <string name="session_expired">Session Expired</string>
    <string name="arts">Arts</string>
    <string name="or_login_with">Login With</string>
    <string name="logout">Logout</string>
    <string name="verify">Verify</string>
    <string name="confirm_your_password_hint">Confirm your password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="facebook_app_id">888528152351382</string>
    <string name="fb_login_protocol_scheme">fb888528152351382</string>
    <string name="facebook_client_token">02af25d1d8c28a34fc7cb5384d314420</string>
    <string name="add_preferred_time"><u>Add Preferred Time</u></string>
</resources>