<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/first_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/careerSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/career_selection_nrs_3999"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary2"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:paddingHorizontal="5dp"
            android:text="@string/_2_counseling_1_to_1_sessions_with_career_counselor"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_buyNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary2"
            android:paddingHorizontal="25dp"
            android:text="@string/buy_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/montserrat_semibold"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>