<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.setting.FeedBack">

    <LinearLayout
        android:id="@+id/feedback_relative"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_icon_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/keyboard_backspace" />

        <TextView
            android:id="@+id/feed_back_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/give_feedBack"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/feedback_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/ll_bg"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="50dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback_relative">

        <ImageView
            android:id="@+id/thumb_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/thumbs_up_down" />

        <TextView
            android:id="@+id/text_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumb_icon"
            android:layout_marginVertical="16dp"
            android:padding="5dp"
            android:text="@string/feedback_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/text_feedback"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/feedback_bg"
            android:gravity="start"
            android:hint="@string/write_here"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:padding="14dp" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/white"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>